:bug: fix bug where lang selectors are center-aligned

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -83,6 +83,7 @@ a {
     @apply text-xs;
     @apply uppercase;
     @apply items-center;
+    @apply md:items-start;
   }
 
   .share-panel__icons {
